# motatool

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
scripts/: detools_shim.py
src/: build.rs  crypto.rs  delta.rs  encode.rs  endf.rs  format.rs  input.rs  lib.rs  main.rs  merkle.rs  serve.rs  targets.rs  verify.rs
tests/: delta.rs  encode.rs  roundtrip.rs  seeder.rs
tests/common/: mod.rs
